--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "zod-tutorial-kit",
-  "version": "0.0.1",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "astro": "astro",
-    "build": "astro check && astro build",
-    "dev": "astro dev",
-    "preview": "astro preview",
-    "start": "astro dev"
-  },
-  "dependencies": {
-    "@tutorialkit/components-react": "0.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.8.3",
-    "@astrojs/react": "^3.6.0",
-    "@iconify-json/ph": "^1.1.13",
-    "@iconify-json/svg-spinners": "^1.1.2",
-    "@tutorialkit/astro": "0.1.0",
-    "@tutorialkit/types": "0.1.0",
-    "@types/node": "^20.14.12",
-    "@types/react": "^18.3.3",
-    "@unocss/reset": "^0.61.5",
-    "astro": "^4.12.2",
-    "fast-glob": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "typescript": "^5.5.4",
-    "unocss": "^0.61.5"
-  }
+	"name": "zod-tutorial-kit",
+	"version": "0.0.1",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"astro": "astro",
+		"build": "astro check && astro build",
+		"check": "biome check . --write",
+		"dev": "astro dev",
+		"preview": "astro preview",
+		"start": "astro dev"
+	},
+	"dependencies": {
+		"@tutorialkit/components-react": "0.1.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@astrojs/check": "^0.8.3",
+		"@astrojs/react": "^3.6.0",
+		"@biomejs/biome": "1.8.3",
+		"@iconify-json/ph": "^1.1.13",
+		"@iconify-json/svg-spinners": "^1.1.2",
+		"@tutorialkit/astro": "0.1.0",
+		"@tutorialkit/types": "0.1.0",
+		"@types/node": "^20.14.12",
+		"@types/react": "^18.3.3",
+		"@unocss/reset": "^0.61.5",
+		"astro": "^4.12.2",
+		"fast-glob": "^3.3.2",
+		"prettier-plugin-astro": "^0.14.1",
+		"typescript": "^5.5.4",
+		"unocss": "^0.61.5"
+	}
 }
