--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"start": "astro dev"
 	},
 	"dependencies": {
+		"@astrojs/vercel": "^7.7.2",
 		"@tutorialkit/components-react": "0.1.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
